// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar StatusBar.StatusBar has not inadvertently changed 1`] = `
<div
  className="c-status-bar"
>
  Status
</div>
`;

exports[`StatusBar StatusBar.StatusGroup has not inadvertently changed 1`] = `
<div
  className="c-status-bar__group"
/>
`;

exports[`StatusBar StatusBar.StatusIndicator has not inadvertently changed 1`] = `
<div
  className="c-status-bar__indicator c-status-bar-item"
/>
`;

exports[`StatusBar StatusBar.StatusLabel has not inadvertently changed 1`] = `
<div
  className="c-status-bar__label"
/>
`;
